src/App.css
html,body{
  margin: 0;
  padding: 0;
  font-family: "Inter", sans-serif;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}

img{
  margin: 0 auto;
}

button:hover{
  background-color: #6dd5a6;
}

@keyframes slide{
  from{
      transform: translateY(-10px);
  }
  to{
      transform: translateY(0px);
  }
}

